--- a/css/style.css
+++ b/css/style.css
@@ -1481,10 +1481,19 @@ body
 	outline: none;
 	border-radius: 50px;
 	border:none;
-	padding: 15px 12px;
-	font-size: 15px;
+	padding: 8px 12px;
+	font-size: 14px;
 }
-
+.room-Booking .inputs select
+{
+	background: ghostwhite;
+	outline: none;
+	border-radius: 50px;
+	border:none;
+	padding: 8px 12px;
+	font-size: 14px;
+	width: 100%;
+}
 .room-Booking .inputs span
 {
 	position: absolute;
@@ -1494,11 +1503,11 @@ body
 	color: gray;
 	pointer-events: none;
 	transition: 0.3s ease;
-	font-size: 15px;
+	font-size: 14px;
 }
 .room-Booking .inputs input:focus ~ span, .room-Booking .inputs input:valid ~ span
 {
-	top:-5px;
+	top:-10px;
 	left: 0;
 	background: var(--main-theme-color);
 	border-radius: 10px;
@@ -1512,7 +1521,7 @@ body
 	background: var(--main-theme-color);
 	color: white;
 	width: 100%;
-	padding: 15px;
+	padding: 10px 15px;
 	cursor: pointer;
 	transition: 0.2s ease;
 	border:none;
@@ -2347,7 +2356,7 @@ footer .footer-cols
 	top:13px;
 	left: 15px;
 	pointer-events: none;
-	font-size: 15px;
+	font-size: 14px;
 	color: rgb(80, 80, 80);
 	transition: 0.4s ease;
 }
@@ -2369,6 +2378,16 @@ footer .footer-cols
 	font-weight: bold;
 }
 .roomDescription-cols .room-inputs input
+{
+	margin-bottom: 8px;
+	margin-top: 5px;
+	padding: 10px 15px;
+	border-radius: 35px;
+	background: rgba(0,0,100,0.1);
+	outline: none;
+	border: none;
+}
+.roomDescription-cols .room-inputs select
 {
 	margin-bottom: 8px;
 	margin-top: 5px;
@@ -3291,7 +3310,7 @@ footer .footer-cols
 {
 	width: 100%;
 	display: flex;
-	height: 450px;
+	height: 480px;
 	object-fit: cover;
 }
 .enquire-now .enquire-now-cols .enquire-now-left 
@@ -3316,14 +3335,14 @@ footer .footer-cols
 	top:50%;
 	left: 15px;
 	transform: translateY(-50%);
-	font-size: 15px;
+	font-size: 14px;
 	pointer-events: none;
 	transition: 0.4s ease;
 	display: block;
 }
 .enquire-now .enquire-now-cols .enquire-now-right .enquire-now-fields:focus-within span, .enquire-now .enquire-now-cols .enquire-now-right .enquire-now-fields input:valid ~ span
 {
-	transform: translateY(-120%) scale(0.65);
+	transform: translateY(-125%) scale(0.65);
 	background-color: white;
 	border-radius: 35px;
 	padding:3px 8px;
@@ -3333,8 +3352,18 @@ footer .footer-cols
 }
 .enquire-now .enquire-now-cols .enquire-now-right .enquire-now-fields input
 {
-	padding: 10px;
-	font-size: 15px;
+	padding: 7px 10px;
+	font-size: 14px;
+	margin: 6px 0;
+	width: 100%;
+	border-radius: 35px;
+	border: none;
+	background-color: #bbcea58a;
+}
+.enquire-now .enquire-now-cols .enquire-now-right .enquire-now-fields select
+{
+	padding: 7px 10px;
+	font-size: 14px;
 	margin: 6px 0;
 	width: 100%;
 	border-radius: 35px;
